feat: panel crud
